# merge-action

./: .pre-commit-config.yaml  Dockerfile  README.md  action.yml  merge.py  pyproject.toml
.github/workflows/: ci.yml
