[project]
name = "flathub_merge_action"
version = "1.0.0"
description = "Flathub merge action"
authors = [
  {name = "Bartłomiej Piotrowski", email = "b@bpiotrowski.pl"},
  {name = "bbhtt", email = "bbhtt@bbhtt.space"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "<4.0,>=3.10"
dependencies = [
    "PyGithub<3.0.0,>=2.6.1",
    "PyGObject<4.0.0,>=3.48.2",
    "pygit2<2.0.0,>=1.15.0",
    "gql[requests]>=3.5.0,<4.0",
    "PyYAML<7.0.0,>=6.0.1",
]

[project.urls]
Homepage = "https://github.com/flathub-infra/merge-action"
Repository = "https://github.com/flathub-infra/merge-action.git"

[dependency-groups]
dev = [
    "pre-commit<4.0.0,>=3.8.0",
    "mypy<2.0.0,>=1.11.2",
    "ruff<1.0.0,>=0.6.7",
    "PyGObject-stubs<3.0.0,>=2.11.0",
    "types-pyyaml<7.0.0.0,>=6.0.12.2",
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
extra_checks = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
strict = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 88
include = ["*.py"]
target-version = "py310"

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C4",
  "DTZ",
  "E",
  "ERA",
  "F",
  "I",
  "ICN",
  "PIE",
  "PL",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "T201",
  "UP",
  "W",
]

ignore = [
  "PLR2004",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "S105",
  "S320",
  "S607",
  "S603",
]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
